fix: adjust margin for list items to improve spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ li {
     display: flex;
     gap: 20px;
     justify-content: center;
-    margin: 40px 0;
+    margin: 45px 0;
 }
 
 .hamburger span {
